WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
27618
WebCore/page/DOMTimer.cpp/h does not conform to style standards
https://bugs.webkit.org/show_bug.cgi?id=27618
Summary
WebCore/page/DOMTimer.cpp/h does not conform to style standards
Mike Fenton
Reported
2009-07-23 12:39:34 PDT
cpplint reports a number of valid style fixes that should be made to WebCore/page/DOMTimer.cpp/h.
Attachments
Style patch for DOMTimer.cpp/h
(5.77 KB, patch)
2009-07-23 13:00 PDT
,
Mike Fenton
eric
: review+
Details
Formatted Diff
Diff
View All
Add attachment
proposed patch, testcase, etc.
Mike Fenton
Comment 1
2009-07-23 13:00:09 PDT
Created
attachment 33356
[details]
Style patch for DOMTimer.cpp/h
Darin Adler
Comment 2
2009-07-23 13:13:22 PDT
Comment on
attachment 33356
[details]
Style patch for DOMTimer.cpp/h It seems that most of this patch is about stripping trailing whitespace. I didn't know we had a convention that said this was important.
Adam Treat
Comment 3
2009-07-23 13:18:12 PDT
In the absence of (In reply to
comment #2
)
> (From update of
attachment 33356
[details]
) > It seems that most of this patch is about stripping trailing whitespace. I > didn't know we had a convention that said this was important.
In the abscense of other styling errors, maybe not. But in addition to... Why not? They serve no useful purpose and can be distracting in some editors that highlight them.
Mike Fenton
Comment 4
2009-07-23 13:55:12 PDT
This patch does include non-whitespace changes as well as whitespace changes.
Eric Seidel (no email)
Comment 5
2009-07-23 23:12:32 PDT
Comment on
attachment 33356
[details]
Style patch for DOMTimer.cpp/h I wish XCode would strip whitespace for me. ;) The changes look fine.
Adam Barth
Comment 6
2009-07-23 23:56:07 PDT
Will land.
Adam Barth
Comment 7
2009-07-24 00:28:55 PDT
Committing to
http://svn.webkit.org/repository/webkit/trunk
... M WebCore/ChangeLog M WebCore/page/DOMTimer.cpp M WebCore/page/DOMTimer.h Committed
r46324
M WebCore/ChangeLog M WebCore/page/DOMTimer.h M WebCore/page/DOMTimer.cpp
r46324
= 33c74813d8d1eb35a78b02d4d954b5890c1b7285 (trunk) No changes between current HEAD and refs/remotes/trunk Resetting to the latest refs/remotes/trunk
http://trac.webkit.org/changeset/46324
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug